name: unit-value
version: 0.1.0
build-type: Simple
cabal-version: >= 1.18

library
  default-language: Haskell2010
  exposed-modules: UnitValue
  hs-source-dirs: lib
  build-depends: base

executable unit-value
  build-depends: base, unit-value
  default-language: Haskell2010
  hs-source-dirs: bin
  main-is: Main.hs
